config tweaks and hostname changes in preparation for go live

--- a/MailScanner.conf
+++ b/MailScanner.conf
@@ -91,21 +91,21 @@
 #       So don't put "." or "_" in this setting.
 #
 # **** RULE: It must not contain any spaces! ****
-%org-name% = yoursite
+%org-name% = as200552
 
 # Enter the full name of your organisation below, this is used in the
 # signature placed at the bottom of report messages sent by MailScanner.
 # It can include pretty much any text you like. You can make the result
 # span several lines by including "\n" sequences in the text. These will
 # be replaced by line-breaks.
-%org-long-name% = Your Organisation Name Here
+%org-long-name% = 1 Click Services LTD
 
 # Enter the location of your organisation's web site below. This is used
 # in the signature placed at the bottom of report messages sent by
 # MailScanner. It should preferably be the location of a page that you
 # have written explaining why you might have rejected the mail and what
 # the recipient and/or sender should do about it.
-%web-site% = www.your-organisation.com
+%web-site% = www.as200552.net
 
 # Configuration directory containing this file
 %etc-dir% = /etc/MailScanner
