--- a/apache.conf
+++ b/apache.conf
@@ -1,5 +1,5 @@
-virtualhost *:80>
-    ServerName outbound-mailwatch-XXX.simpledns.xyz
+<virtualhost *:80>
+    ServerName outbound-filtered-XXX.as200552.net
     DocumentRoot "/opt/mailwatch/mailscanner"
     ErrorLog "/var/log/apache2/mailwatch/error.log"
     CustomLog "/var/log/apache2/mailwatch/access.log" combined
@@ -16,6 +16,6 @@ virtualhost *:80>
     AddType application/x-httpd-php .php
     DirectoryIndex index.php
 RewriteEngine on
-RewriteCond %{SERVER_NAME} =outbound-mailwatch-2.simpledns.xyz
+RewriteCond %{SERVER_NAME} =outbound-filtered-XXX.as200552.net
 RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 </virtualhost>
