config updates to bring repo inline with applied configs addition of README - setup instructions

--- a/MailScanner.conf
+++ b/MailScanner.conf
@@ -2522,7 +2522,7 @@ Custom Spam Scanner Timeout History = 20
 # This can also be the filename of a ruleset, in which case the filename
 # must end in ".rule" or ".rules".
 #Spam Actions = store forward anonymous@ecs.soton.ac.uk
-Spam Actions = deliver header "X-Spam-Status: Yes"
+Spam Actions = store header "X-Spam-Status: Yes"
 
 # This is just like the "Spam Actions" option above, except that it applies
 # when the score from SpamAssassin is higher than the "High SpamAssassin Score"
@@ -2634,7 +2634,7 @@ High Scoring Spam Actions = store
 #
 # This can also be the filename of a ruleset, in which case the filename
 # must end in ".rule" or ".rules".
-Non Spam Actions = deliver header "X-Spam-Status: No"
+Non Spam Actions = store deliver header "X-Spam-Status: No"
 
 # This next setting is very powerful. It allows you to adjust the list of
 # actions taken on a message by adding or removing any action or actions,
