updates to mailscanner conf to disable inline phishing warnings after a number of false positives

--- a/MailScanner.conf
+++ b/MailScanner.conf
@@ -1036,13 +1036,13 @@ Use Stricter Phishing Net = yes
 # If a phishing fraud is detected, do you want to highlight the tag with
 # a message stating that the link may be to a fraudulent web site.
 # This can also be the filename of a ruleeset.
-Highlight Phishing Fraud = yes
+Highlight Phishing Fraud = no
 
 # Do you want to highlight links that do not show a URL to the user?
 Highlight Hidden URLs = no
 
 # Do you want Highlight Phishing in mailto: links?
-Highlight Mailto Phishing = yes
+Highlight Mailto Phishing = no
 
 # There are some companies, such as banks, that insist on sending out
 # email messages with links in them that are caught by the "Find Phishing
@@ -1894,7 +1894,7 @@ Size Subject Text = {Size}
 #      yes   = Add text to the start of the subject line, or
 #      end   = Add text to the end of the subject line.
 # This can also be the filename of a ruleset.
-Disarmed Modify Subject = start
+Disarmed Modify Subject = no
 
 # This is the text to add to the start of the subject if the
 # "Disarmed Modify Subject" option is set.
