updated mailscanner.conf to allow password protected archives per previous EFA configuration

--- a/MailScanner.conf
+++ b/MailScanner.conf
@@ -856,7 +856,7 @@ Block Unencrypted Messages = no
 # Leaving this set to "no" is a good way of protecting against all the
 # protected zip files used by viruses at the moment.
 # This can also be the filename of a ruleset.
-Allow Password-Protected Archives = no
+Allow Password-Protected Archives = yes
 
 # Normally, you can still get the filenames out of a password-protected
 # archive, despite the encryption. So by default filename checks are still
